# raytrace-weekend-jax

./: .gitignore  README.md  notes.md  pyproject.toml
assets/: raytracing-pipeline.drawio
playground/: note.ipynb  scene_01_single_sphere.py  scene_02_two_sphere.py  scene_03_bunny.py  scene_03_bunny_night.py  sphere.py  test_random_hemishpere.py
src/myraytrace/: objects.py  raytrace.py  types.py  utils.py
